--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#0fd6e4</color>
-    <color name="colorPrimaryDark">#cf8308</color>
-    <color name="colorAccent">#a7239e</color>
+    <color name="black">#000000</color>
+    <color name="text_black">#252121</color>
+    <color name="light_gray">#dedddd</color>
+    <color name="blue">#3b50c9</color>
 </resources>
